# Generative-AI-Blockchain-2026

./: .env.dev  .env.example  .gitignore  .gitmodules  .privacy-router.config.yaml  .privacy-router.config.yaml.example  AGENTS.md  Dockerfile  Dockerfile.dev  PROPOSAL.md  README.md  TODO.md  TODO_DEMO.md  TROUBLESHOOTING.md  TROUBLESHOOTING_KO.md  conftest.py  dashboard.html  docker-compose.exp-hermes.yml  docker-compose.exp-openclaw.yml  docker-compose.hermes-standalone.yml  docker-compose.hermes.yml  docker-compose.openclaw-standalone.yml  docker-compose.openclaw.yml  docker-compose.vllm.yml  docker-compose.yml  package.json  pyproject.toml  server-requirements.txt  skills-lock.json
.agents/skills/: privacy-router-setup
admin/: Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json  pnpm-lock.yaml
agents/: __main__.py  eval.py  llm.py
agents/evaluator/: __init__.py  evaluate.prompt  evaluator.py  schemas.py
agents/extractor/: extract.fixed.prompt  extract.prompt  extractor.py  schemas.py  two_phase.py
agents/judge/: classify.prompt  judge.py  schemas.py
agents/masker/: __init__.py  contract_store.py  crypto.py  masker.py  schemas.py
agents/memory/: session.py
agents/router/: __init__.py  middle_man.py  router.py  schemas.py
agents/tests/: test_llm.py
analysis/: integration_analysis.json
code/: .gitignore  .privacy-router.config.yaml  AGENTS.md  TROUBLESHOOTING.md  TROUBLESHOOTING_KO.md
code/agents/: __init__.py  llm.py
code/config/: loader.py  schemas.py
code/docs/: ARCHITECTURE.md  AUDIT_REPORT.md  DOCUMENTATION_STRUCTURE.json  detection.md  getting-started.md  ground_truth_improvements.json  security.md
code/examples/: litellm-guardrail-config.yaml
code/hermes-agent/: config-privacy-router.yaml  config.yaml
code/scripts/: exaone_monkeypatch.sh  exaone_vllm_start.sh
code/server/: config.py  opencode_relay.py
code/web/: package.json  usage-dashboard.html
codes/.MD/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md
codes/MCP/: LESSON_SENDER_MCP.py  Memory_Logs_MCP.py  PDF_READER_MCP.py  TRACK_MANAGER_MCP.py  TUTOR_MEMORY.md  YOUTUBE_SCRAPPER_MCP.py
config/: schemas.py
db/: models.py  session.py
demo-video/: README.md
demo/hermes/: Dockerfile  config-opencode.yaml  config-openrouter.yaml  config-privacy-router.yaml  config.yaml  start.sh
demo/openclaw/: Dockerfile  openclaw-opencode.json  openclaw-openrouter.json  openclaw.json  start.sh  (+1 more)
docs/: 2026-submission-record.md  ARCHITECTURE.md  INTEGRATION_ARCHITECTURE.md  getting-started.md  project-types.md  rubric.md
hermes-agent/: Dockerfile  config-api.yaml  config-mcp.yaml  config-privacy-router.yaml  entrypoint.sh
observability/: loki-config.yaml  otel-collector-config.yaml  prometheus.yml  promtail-config.yaml
paper/: report_en.tex  report_ko.tex
patches/: exaone_vllm_patch.py  sitecustomize.py
projects/: projects-2026.md
scripts/: ablation_study.py  demo_health.sh  demo_setup.sh  eval_all.py  run_eval.sh  tune_params.py
server/: __init__.py
slides/: capture.mjs  compile.py  presentation_en.html  presentation_en.pptx  presentation_ko.aux  presentation_ko.nav  presentation_kr.html  presentation_kr.pptx
tests/: test_openapi.py
web/: index.html
(+1500 files in other folders)
