[project]
name = "privacy-router"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "devcomfort", email = "im@devcomfort.me" }
]
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "litellm>=1.85.0",
    "openai>=2.37.0",
    "httpx>=0.28.1",
    "streamlit>=1.57.0",
    "transformers>=5.8.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "instructor>=1.15.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
    "mcp>=1.0",
    "dotpromptz>=0.1.5",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
privacy-router = "packages.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "ruff>=0.15.15",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/privacy_router"]
