[project]
name = "privacy-router"
version = "0.1.0"
description = "Privacy Router — AI agent privacy proxy layer"
authors = [
    { name = "devcomfort", email = "im@devcomfort.me" }
]
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "litellm>=1.85.0",
    "openai>=2.37.0",
    "httpx>=0.28.1",
    "streamlit>=1.57.0",
    "transformers>=5.10.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "instructor>=1.15.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
    "mcp>=1.0",
    "dotpromptz>=0.1.5",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.9",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "cryptography>=44.0.0",
    "python-pptx>=1.0.2",
    "opencv-python-headless>=4.13.0.92",
    "pymupdf>=1.27.2.3",
]
requires-python = ">= 3.13"

[project.scripts]
privacy-router = "server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "ruff>=0.15.15",
    "pytest-cov>=7.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agents", "server", "db", "config", "web"]

[tool.pytest.ini_options]
testpaths = ["tests", "agents/tests", "agents/extractor/tests", "agents/masker/tests", "agents/judge/tests", "agents/router/tests", "server/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "core: unit tests (no external dependencies)",
    "scenario: integration tests (requires running server)",
    "slow: tests that take >10s",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "server", "db", "config"]
